fix:edit scrollbar

--- a/src/layouts/header/header.module.scss
+++ b/src/layouts/header/header.module.scss
@@ -240,7 +240,7 @@
 				padding: 0 4px;
 			}
 		}
-		
+
 
 		.nav__button {
 			position: absolute;
@@ -479,6 +479,20 @@
   max-height: 650px;
   overflow-y: scroll;
   box-shadow: 0px 10px 10px 2px rgba(34, 60, 80, 0.2);
+	&::-webkit-scrollbar {
+		width: 12px;
+	}
+
+	&::-webkit-scrollbar-track {
+		background: #ffffff;
+	}
+
+	&::-webkit-scrollbar-thumb {
+
+		background-color: #3b3b3b;
+		border-radius: 10px;
+		border: 3px solid #ffffff
+	}
 }
 
 .body {
